--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,1 +1,16 @@
+.app {
+  text-align: center;
+  font-family: sans-serif;
+  margin-top: 50px;
+}
+
+.search {
+  padding: 10px;
+  width: 250px;
+  font-size: 16px;
+}
+
+.weather {
+  margin-top: 20px;
+}
 
